# Sekver

./: .gitignore  README.md  example.skv  test.json  test.skv
.workspace/: Sekver.code-workspace
compiler/: Cargo.toml  docs.md  example.skv  test.json
compiler/src/: main.rs
compiler/src/syntax_tree/: syntax.rs  utils.rs
compiler/src/syntax_tree/grammar/: get_type.rs  mod.rs
compiler/src/syntax_tree/grammar/blocks/: if.rs  return.rs  variable_init.rs
compiler/src/syntax_tree/grammar/expression/: mod.rs
compiler/src/tokenize/: mod.rs  tokens.rs
sekver/: README.md  package.json
sekver/src/: extension.ts  sekver.tmLanguage.json
src/: main.rs
src/syntax_tree/: mod.rs  syntax.rs
src/syntax_tree/grammar/: mod.rs
src/syntax_tree/grammar/blocks/: mod.rs  variable_init.rs  while.rs
src/syntax_tree/grammar/expression/: mod.rs
src/tokenize/: mod.rs  tokens.rs
vscode-extension/: CHANGELOG.md  package-lock.json  package.json  sekver-0.0.1.vsix
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: sekver.tmLanguage.json
