[package]
edition = "2021"
name = "compiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
